# openclaw-stargate

./: DEPLOYMENT.md  README.md  main.py  memo.md  pyproject.toml
agents/: README.md  sg1-carter.yaml  sg1-jackson.yaml  sg1-oneill.yaml  sg1-tealc.yaml
configs/: atlantis-expedition.yaml  azure-openai-provider.json5  sg1-gateways.yaml  sg1-primary.yaml  sg1-team.yaml  sg1-workflow.yaml  sg2-recon.yaml  sgc-command.yaml
docs/: ARCHITECTURE.md  AZURE-OPENAI.md  MODELS.md  ROUTING.md  TROUBLESHOOTING.md  WORKFLOW.md
scripts/: README.md  feishu_access.json  fleet-status.sh  install-ollama.sh  setup-azure-openai.sh  setup-tailscale.sh  sg1-logs.sh  sg1-restart.sh  sg1-setup.sh  sg1-start.sh  sg1-status.sh  sg1-stop.sh  sg1-tracker.sh  test_connection_feishu.py
skills/: README.md
skills/daniel-jackson/: NOTICE_FOR_SG1_TEAM.md  README.md  patent-image-to-doc.skill  web-search.skill
templates/: carter-to-tealc-handoff.md  tealc-execution-report.md  woolsey-audit-template.md
