[project]
name = "openclaw-stargate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark-oapi>=1.5.3",
]

[[tool.uv.index]]
#url="https://pypi.tuna.tsinghua.edu.cn/simple"
url="http://mirrors.aliyun.com/pypi/simple"
default=true
